syntax = "proto3";

package serverpb;
option go_package = "serverpb";

message Address {
    string id = 1;
    string savedAs = 2;
    string otherName = 3;
    string houseAddress = 4;
    string area = 5;
    string landmark = 6;
    string userId = 7;
}

message Shop {
    string id = 1;
    string name = 2;
    string locality = 3;
    repeated string types = 4;
}

message MenuItem {
    string id = 1;
    string name = 2;
    int32 price = 3;
    string category = 4;
    bool bestSeller = 5;
    int32 weight = 6;
    string shopId = 7;
}

message Order {
    int32 totalPrice = 1;
    string shopId = 2;
    int32 deliveryRating = 3;
    int32 foodRating = 4;
    string orderDetails = 5;
    string userId = 6;
    string status = 7;
    int32 totalWeight = 8;
    string addressId = 9;
    string id = 10;
}

message RegisterUserRequest {
    string mobile = 1;
    string name = 2;
    string firebase_id = 3;
}

message RegisterUserResponse {
    string status = 1;
}

message GetUserDetailsRequest {
    string firebase_id = 1;
}

message GetUserDetailsResponse {
    string id = 1;
    string name = 2;
    string mobile = 3;
}

message UpdateUserDetailsRequest {
    string id = 1;
    string name = 2;
}

message UpdateUserDetailsResponse {
    string status = 1;
}

message GetUserAddressRequest {
    string userId = 1;
}

message GetUserAddressResponse {
    repeated Address address = 1;
}

message AddNewAddressRequest {
    Address address = 1;
}

message AddNewAddressResponse {
    Address address = 1;
}

message UpdateAddressRequest {
    Address address = 1;
}

message UpdateAddressResponse {
    Address address = 1;
}

message DeleteAddressRequest {
    string addressId = 1;
}

message DeleteAddressResponse {
    string status = 1;
}

message GetShopListRequest {

}

message GetShopListResponse {
    repeated Shop shops = 1;
}

message GetShopMenuRequest {
    string shopId = 1;
}

message GetShopMenuResponse {
    repeated MenuItem menu = 1;
}

message CreateNewOrderRequest {
    Order order = 1;
}

message CreateNewOrderResponse {
    Order order = 1;
}

message GetPreviousOrdersRequest {
    string userId = 1;
}

message GetPreviousOrdersResponse {
    repeated Order orders = 1;
}

message UpdateOrderRequest {
    Order order = 1;
}

message UpdateOrderResponse {
    Order order = 1;
}

service serverpb {
    // User related requests
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {};
    rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse) {};
    rpc UpdateUserDetails(UpdateUserDetailsRequest) returns (UpdateUserDetailsResponse) {};

    // Address related requests
    rpc GetUserAddress(GetUserAddressRequest) returns (GetUserAddressResponse) {};
    rpc AddNewAddress(AddNewAddressRequest) returns (AddNewAddressResponse) {};
    rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse) {};
    rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse) {};

    // Shop related requests
    rpc GetShopList(GetShopListRequest) returns (GetShopListResponse) {};
    rpc GetShopMenu(GetShopMenuRequest) returns (GetShopMenuResponse) {};

    // Order related requests
    rpc CreateNewOrder(CreateNewOrderRequest) returns (CreateNewOrderResponse) {};
    rpc GetPreviousOrders(GetPreviousOrdersRequest) returns (GetPreviousOrdersResponse) {};
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {};
}